Added Custom Employee ID, Added POST /auth/logout and more....
